# MatrixSolvers

./: .gitignore  CMakeLists.txt  Ex  Makefile  Matrix.cpp  Matrix.h  Solver.cpp  Solver.h  Vector.cpp  Vector.h  main.cpp  solve  test.cpp
LinearEssences/: DoubleVector.cpp  DoubleVector.h  IntegerVector.cpp  IntegerVector.h  Matrix.cpp  Matrix.h  Vector.h
Solver/: Solver.cpp  Solver.h
Vectors/: BoolVector.cpp  BoolVector.h  Matrix.cpp  Matrix.h
materials/: Ex  praktikumnaevm1998.djv  requirements.txt  tasks.txt
